[package]
name = "pallet-btc-vault"
version = "1.0.0"
authors = ["GalacticCouncil"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/galacticcouncil/hydration-node"
description = "BTC Vault pallet for Bitcoin deposits via MPC signing"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

alloy-sol-types = { version = "0.8.14", default-features = false }

pallet-signet = { path = "../signet", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
secp256k1 = { version = "0.29.1", features = ["rand", "recovery"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "hex/std",
    "serde/std",
    "serde_json/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "alloy-sol-types/std",
    "pallet-signet/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]

[target.'cfg(not(feature = "std"))'.dependencies]
borsh = { version = "1.5", default-features = false, features = ["derive", "hashbrown"] }

[target.'cfg(feature = "std")'.dependencies]
borsh = { version = "1.5", default-features = false, features = ["derive", "std"] }
