[package]
name = "pallet-btc-vault"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-signet = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }
alloy-sol-types = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "frame-benchmarking?/std",
    "pallet-signet/std",
    "serde_json/std",
    "hex/std",
    "alloy-sol-types/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-signet/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
