[package]
name = "pallet-build-evm-tx"
version = "1.0.0"
description = "Pallet for building RLP serialized EVM transactions"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/hydration-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/hydration-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
sp-std = { workspace = true }
sp-runtime = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# External dependencies
signet-rs = { git = "https://github.com/sig-net/signet.rs", branch = "pre-compiled", default-features = false, features = ["evm"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sp-io = { workspace = true }

# Optionals
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
# For transaction validation tests
alloy-consensus = "0.8"
alloy-primitives = "0.8"
alloy-rlp = "0.3"
alloy-sol-types = "0.8"
alloy-core = "0.8"

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",
    "scale-info/std",
    "hex/std",
]
try-runtime = ["frame-support/try-runtime"]