[package]
name = "pallet-build-evm-tx"
version = "1.0.0"
description = "Pallet for building RLP serialized EVM transactions"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/hydration-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/hydration-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
sp-std = { workspace = true }
sp-core = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

ethereum = { workspace = true }
rlp = { version = "0.5.2", default-features = false }

# Optionals
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
hex = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-core/std",
    "scale-info/std",
    "ethereum/std",
    "rlp/std",
]
try-runtime = ["frame-support/try-runtime"]