[package]
name = "pallet-circuit-breaker"
version = "1.1.11"
authors = ["GalacticCouncil <hydradx@galacticcouncil.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/galacticcouncil/hydradx-node'
repository = 'https://github.com/galacticcouncil/hydradx-node'
description = "Circuit breakers for AMMs"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { features = ["derive"], optional = true, version = "1.0.136" }
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.4.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false , optional = true}
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }


# Warehouse
hydradx-traits = { workspace = true }

[dev-dependencies]
pallet-omnipool = { workspace = true }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38" }
hydra-dx-math = { workspace = true }
test-utils = { workspace = true }
pretty_assertions = "1.2.1"
test-case = "3.0.0"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'serde/std',
    'scale-info/std',
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]
