[package]
name = "pallet-circuit-breaker"
version = "1.1.25"
authors = ["GalacticCouncil <hydradx@galacticcouncil.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/galacticcouncil/hydradx-node'
repository = 'https://github.com/galacticcouncil/hydradx-node'
description = "Circuit breakers for AMMs"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true, optional = true }
codec = { workspace = true }
scale-info = {workspace = true }

# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true}
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }


# Warehouse
hydradx-traits = { workspace = true }

[dev-dependencies]
pallet-omnipool = { workspace = true }
pallet-balances = { workspace = true }
orml-tokens = { workspace = true }
orml-traits = { workspace = true }
hydra-dx-math = { workspace = true }
test-utils = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'serde/std',
    'scale-info/std',
    'frame-benchmarking/std',
    'pallet-balances/std',
    'orml-tokens/std',
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]
