[package]
name = 'pallet-claims'
version = '3.4.0'
description = 'HydraDX Claims Module'
authors = ['GalacticCouncil']
edition = '2021'
license = 'Apache 2.0'
homepage = 'https://github.com/galacticcouncil/hydradx-node'
repository = 'https://github.com/galacticcouncil/hydradx-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.0.0" }
serde = {optional = true, version = '1.0.136', features = ['derive']}
hex = {default-features = false, version = "0.4.3"}
hex-literal = '0.3.4'
lazy_static = {features = ['spin_no_std'], version = "1.4.0"}
rustc-hex = {version = '2.1.0', default-features = false}

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false , optional = true}
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

# Local dependencies
primitives = {path = '../../primitives', default-features = false}

# ORML dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8c625a5ab43c1c56cdeed5f8d814a891566d4cf8", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8c625a5ab43c1c56cdeed5f8d814a891566d4cf8", default-features = false }
orml-utilities = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8c625a5ab43c1c56cdeed5f8d814a891566d4cf8", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'orml-traits/std',
  'orml-tokens/std',
  'orml-utilities/std',
  'primitives/std',
  'rustc-hex/std',
  'serde/std',
  'scale-info/std',
]
