[package]
name = "pallet-claims"
version = "3.4.13"
description = "HydraDX Claims Module"
authors = ["GalacticCouncil"]
edition = "2021"
license = "Apache 2.0"
homepage = "https://github.com/galacticcouncil/hydradx-node"
repository = "https://github.com/galacticcouncil/hydradx-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { workspace = true }
codec = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
lazy_static = { workspace = true }
rustc-hex = { workspace = true }

# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Local dependencies
primitives = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "primitives/std",
    "rustc-hex/std",
    "serde/std",
    "scale-info/std",
    "pallet-balances/std",
    "frame-benchmarking/std"
]
try-runtime = ["frame-support/try-runtime"]
