[package]
name = "pallet-collator-rewards"
version = "1.0.4"
description = "Pallet for collator rewards"
authors = ["GalacticCouncil"]
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/warehouse"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

[dependencies]
log = { default-features = false, version = "0.4.17" }
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.4.0" }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { features = ["derive"], optional = true, version = "1.0.137" }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

# ORML dependencies
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }

# Optionals
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false, optional = true }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false, optional = true }

[dev-dependencies]
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.38", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
std = [
    "serde",
    "codec/std",
    "log/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "orml-traits/std",
    "scale-info/std",
    "sp-runtime/std",
    "pallet-balances/std",
    "pallet-aura/std",
    "pallet-session/std",
]
try-runtime = ["frame-support/try-runtime"]
