[package]
name = "pallet-collator-rewards"
version = "1.0.6"
description = "Pallet for collator rewards"
authors = ["GalacticCouncil"]
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/warehouse"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
log = { default-features = false, version = "0.4.17" }
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.4.0" }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { features = ["derive"], optional = true, version = "1.0.137" }

# Substrate dependencies
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-arithmetic = { workspace = true }
sp-staking = { workspace = true }
pallet-session = { workspace = true }

# ORML dependencies
orml-traits = { workspace = true }

# Optionals
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
orml-tokens = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
std = [
    "serde",
    "codec/std",
    "log/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "orml-traits/std",
    "orml-tokens/std",
    "scale-info/std",
    "sp-runtime/std",
    "pallet-balances/std",
    "pallet-session/std",
]
try-runtime = ["frame-support/try-runtime"]
